ターゲットユーザーセクションのテキスト更新とアイコン画像の追加

--- a/index.html
+++ b/index.html
@@ -47,24 +47,34 @@
       </div>
       <div class="target-grid">
         <div class="target-card">
-          <div class="target-icon">🌱</div>
-          <p>生きていて何も楽しくない人</p>
+          <div class="target-icon">
+            <img src="自分の内側.png" alt="自分の内側と向き合う">
+          </div>
+          <p>自分の内側と向き合う時間を確保したい方</p>
         </div>
         <div class="target-card">
-          <div class="target-icon">✨</div>
-          <p>ネガティブを圧倒的にポジティブに変えたい人</p>
+          <div class="target-icon">
+            <img src="変わりたいのに変われない.png" alt="変わりたいのに変われない">
+          </div>
+          <p>変わりたいのに変われない」を抜け出すきっかけがほしい</p>
         </div>
         <div class="target-card">
-          <div class="target-icon">🔄</div>
-          <p>全ての人間関係を180度変えたい人</p>
+          <div class="target-icon">
+            <img src="人間関係.png" alt="人間関係">
+          </div>
+          <p>人間関係の距離感・関わり方を見直したい方</p>
         </div>
         <div class="target-card">
-          <div class="target-icon">💪</div>
-          <p>自分に自信をつけたい人</p>
+          <div class="target-icon">
+            <img src="自分に自信をつけたい.png" alt="自分に自信をつけたい">
+          </div>
+          <p>自分に自信をつけたい方</p>
         </div>
         <div class="target-card">
-          <div class="target-icon">🌟</div>
-          <p>人生の価値観が180度変わる瞬間を体験したい人</p>
+          <div class="target-icon">
+            <img src="価値観や.png" alt="価値観や優先順位">
+          </div>
+          <p>価値観や優先順位を整理して、次の一歩を決めたい方</p>
         </div>
       </div>
     </div>
