ヒーローセクションのタイトル更新とスマホ最適化（改行調整）

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <div class="hero-content">
       <div class="hero-badge">世界に一つだけの</div>
       <h1 class="hero-title">
-        <span class="hero-title-line">楽しい旅で全員で</span>
-        <span class="hero-title-line hero-title-accent">人生が変わる。</span>
-        <span class="hero-title-line">心理学朝日の</span>
-        <span class="hero-title-line">心理学かけるリトリート</span>
+        考えすぎる毎日から<br>
+        一度離れる<br>
+        <span class="hero-title-accent">心理学×リトリート</span>で 自分を見つめ直す
       </h1>
       <p class="hero-subtitle">非日常を体験し、心理学で幸せ脳を生み出す</p>
       <div class="hero-divider"></div>
@@ -32,7 +31,7 @@
     <div class="container">
       <div class="section-header">
         <span class="section-label">CONCEPT</span>
-        <h2 class="section-title">非日常を体験し、心理学で幸せ脳を生み出す</h2>
+        <h2 class="section-title">非日常を体験し、<br class="mobile-br">心理学で幸せ脳を生み出す</h2>
       </div>
       <p class="section-text">この旅は、今までになかった諦めかけてた未来を再び照らします。<br>マイナスをプラスまで変えてしまう旅です。</p>
     </div>
@@ -95,7 +94,7 @@
         </div>
         <div class="benefit-card">
           <div class="benefit-number">02</div>
-          <h3 class="benefit-title">人の温かさを知る、愛を知る</h3>
+            <h3 class="benefit-title">人の温かさを知る、<br class="mobile-br">愛を知る</h3>
           <p class="benefit-text">リトリート終了後、皆さんが泣いて抱き合うような体験。それだけこのキャンプでは、人の温かさや愛を知り、人間も磨かれるものです。</p>
         </div>
         <div class="benefit-card">
@@ -200,7 +199,7 @@
         <div class="faq-item">
           <div class="faq-icon">Q</div>
           <div class="faq-content">
-            <h3 class="faq-question">二泊三日空けなければならないんですか？</h3>
+            <h3 class="faq-question">二泊三日空けなければ<br class="mobile-br">ならないんですか？</h3>
             <p class="faq-answer">基本は二泊三日です。一泊二日の場合もありますので、その場合はホームページを都度ご確認ください。</p>
           </div>
         </div>
@@ -215,13 +214,13 @@
           <div class="faq-icon">Q</div>
           <div class="faq-content">
             <h3 class="faq-question">キャンセル料はかかりますか？</h3>
-            <p class="faq-answer">キャンセル料は一律5万円程度を予定しています（全員来させるという思いから）。</p>
+            <p class="faq-answer">キャンセル料は一律5万円程度を予定しています<br class="mobile-br">（全員来させるという思いから）。</p>
           </div>
         </div>
         <div class="faq-item">
           <div class="faq-icon">Q</div>
           <div class="faq-content">
-            <h3 class="faq-question">持ち物は何がいりますか？</h3>
+            <h3 class="faq-question">持ち物は何が<br class="mobile-br">いりますか？</h3>
             <p class="faq-answer">（内容は後で決定）</p>
           </div>
         </div>
