ヒーロータイトルサイズ調整とサブタイトル・コンセプトタイトルの更新

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         一度離れる<br>
         <span class="hero-title-accent">心理学×リトリート</span>で 自分を見つめ直す
       </h1>
-      <p class="hero-subtitle">非日常を体験し、心理学で幸せ脳を生み出す</p>
+      <p class="hero-subtitle">考えすぎる毎日から、<br class="mobile-br">離れてみませんか</p>
       <div class="hero-divider"></div>
     </div>
   </section>
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="section-header">
         <span class="section-label">CONCEPT</span>
-        <h2 class="section-title">非日常を体験し、<br class="mobile-br">心理学で幸せ脳を生み出す</h2>
+        <h2 class="section-title">非日常を体験し<br class="mobile-br">心理学で幸せ脳を生み出す</h2>
       </div>
       <p class="section-text">この旅は、今までになかった諦めかけてた未来を再び照らします。<br>マイナスをプラスまで変えてしまう旅です。</p>
     </div>
