ターゲットカードの改行追加とスマホ横スクロール防止の修正

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         一度離れる<br>
         <span class="hero-title-accent">心理学×リトリート</span>で 自分を見つめ直す
       </h1>
-      <p class="hero-subtitle">考えすぎる毎日から、<br class="mobile-br">離れてみませんか</p>
+      <p class="hero-subtitle">考えすぎる毎日から<br class="mobile-br">離れてみませんか</p>
       <div class="hero-divider"></div>
     </div>
   </section>
@@ -49,19 +49,19 @@
           <div class="target-icon">
             <img src="自分の内側.png" alt="自分の内側と向き合う">
           </div>
-          <p>自分の内側と向き合う時間を確保したい方</p>
+          <p>自分の内側と向き合う時間を<br class="mobile-br">確保したい方</p>
         </div>
         <div class="target-card">
           <div class="target-icon">
             <img src="変わりたいのに変われない.png" alt="変わりたいのに変われない">
           </div>
-          <p>変わりたいのに変われない」を抜け出すきっかけがほしい</p>
+          <p>"変わりたいのに変われない"を<br class="mobile-br">抜け出すきっかけがほしい</p>
         </div>
         <div class="target-card">
           <div class="target-icon">
             <img src="人間関係.png" alt="人間関係">
           </div>
-          <p>人間関係の距離感・関わり方を見直したい方</p>
+          <p>人間関係の距離感・関わり方を<br class="mobile-br">見直したい方</p>
         </div>
         <div class="target-card">
           <div class="target-icon">
@@ -73,7 +73,7 @@
           <div class="target-icon">
             <img src="価値観や.png" alt="価値観や優先順位">
           </div>
-          <p>価値観や優先順位を整理して、次の一歩を決めたい方</p>
+          <p>価値観や優先順位を整理して、<br class="mobile-br">次の一歩を決めたい方</p>
         </div>
       </div>
     </div>
