ヘッダーボタンの色変更（コーラル・白アウトライン）とスマホスクロール修正

--- a/index.html
+++ b/index.html
@@ -345,28 +345,69 @@
     const mobileMenuOverlay = document.getElementById('mobile-menu-overlay');
     const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
 
-    hamburgerMenu.addEventListener('click', function() {
+    function closeMobileMenu() {
+      hamburgerMenu.classList.remove('active');
+      mobileMenuOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    hamburgerMenu.addEventListener('click', function(e) {
+      e.stopPropagation();
+      const isActive = hamburgerMenu.classList.contains('active');
       hamburgerMenu.classList.toggle('active');
       mobileMenuOverlay.classList.toggle('active');
-      document.body.style.overflow = mobileMenuOverlay.classList.contains('active') ? 'hidden' : '';
+      document.body.style.overflow = !isActive ? 'hidden' : '';
     });
 
     // モバイルメニューのリンクをクリックしたら閉じる
     mobileNavLinks.forEach(link => {
-      link.addEventListener('click', function() {
-        hamburgerMenu.classList.remove('active');
-        mobileMenuOverlay.classList.remove('active');
-        document.body.style.overflow = '';
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetId = link.getAttribute('href');
+        if (targetId && targetId.startsWith('#')) {
+          const targetElement = document.querySelector(targetId);
+          if (targetElement) {
+            closeMobileMenu();
+            // 少し遅延させてからスクロール（メニューが閉じるのを待つ）
+            setTimeout(() => {
+              const headerHeight = 50;
+              const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - headerHeight;
+              window.scrollTo({
+                top: targetPosition,
+                behavior: 'smooth'
+              });
+            }, 300);
+          }
+        } else {
+          closeMobileMenu();
+        }
       });
     });
 
     // オーバーレイをクリックしたら閉じる
     mobileMenuOverlay.addEventListener('click', function(e) {
       if (e.target === mobileMenuOverlay) {
-        hamburgerMenu.classList.remove('active');
-        mobileMenuOverlay.classList.remove('active');
-        document.body.style.overflow = '';
+        closeMobileMenu();
       }
+    });
+
+    // 通常のナビゲーションリンクもスムーズスクロール
+    document.querySelectorAll('.nav-link').forEach(link => {
+      link.addEventListener('click', function(e) {
+        const targetId = link.getAttribute('href');
+        if (targetId && targetId.startsWith('#')) {
+          e.preventDefault();
+          const targetElement = document.querySelector(targetId);
+          if (targetElement) {
+            const headerHeight = 50;
+            const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - headerHeight;
+            window.scrollTo({
+              top: targetPosition,
+              behavior: 'smooth'
+            });
+          }
+        }
+      });
     });
   </script>
 </body>
